<b><u>CREST</u></b>
 - Fixed the error when adding a fleet.



<h3>May, 2017</h3>
<b><u>VIPPY</u></b>
 - <a href="/system/anniversary" target="_blank">VIPPY's 5 year anniversary</a> !!



<h3>April 19, 2017</h3>
<b><u>ACCESS LIST</u></b>
 - Fixed a bug where adding a corporation to an access-list didn't give that corp access.



<h3>April 05, 2017</h3>
<b><u>MAP</u></b>
 - Fixed a bug where sometimes a system would not be marked as fully scanned, even though all sigs are known.
 - Added confirmation dialogs for deleting a system from the map. FINALLY!



<h3>March 15, 2017</h3>
<b><u>VIPPY</u></b>
 - Made some adjustments to try and fix the lag that Vippy is having issues with lately.

<b><u>MAP</u></b>
 - Fixed a bug with system positioning that was introduced a while ago. People with OCD will be at ease again.
 - Added the requested option for auto-expiry on a map.
   <span style='color:#ffffff;font-weight:bold;text-transform:uppercase;'>This has been enabled by default on all active maps!!!</span>
 	Automatically remove wormhole connections when they are over their lifetime and should have also despawned ingame.
 	Systems marked as persistant will not be automatically removed.



<h3>March 01, 2017</h3>
<b><u>VIPPY</u></b>
 - Sometimes, if you've manually set your main character Vippy would reset it every once in a while for no apparent reason. This has been fixed.

<b><u>CREST</u></b>
 - Made change that (hopefully) improves the issue of your character jumping back and forth and thus creating fake jumps in the jumplog.



<h3>February 08, 2017</h3>
<b><u>ADMIN</u></b>
 - If you are admin, you can now add <a href="/admin/accesslist" target="_blank">Access Lists</a> to (temporarily) share your map to others, even outside your access-control-group.

<b><u>MAP</u></b>
 - Added an icon on a system that has a notification.
 - Fixed the bug that sometimes frigate wormhole could not be unchecked.

<b><u>CREST</u></b>